i added new stuff

--- a/index.html
+++ b/index.html
@@ -5,5 +5,8 @@
     <body>
         <h1>second website </h1>
         <p>second website</p>
+
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non, quo et molestias tempore pariatur exercitationem ipsam eos animi culpa obcaecati amet sint ipsum molestiae facilis aspernatur quidem rerum corporis libero! Explicabo voluptatibus molestias alias aliquid iste nemo ducimus, corrupti incidunt vel tempore, minus tempora! Aperiam ipsam eveniet cupiditate odit blanditiis?</p>
+
     </body>
 </html>
